--- a/AlphaPic/app/src/main/res/values/strings.xml
+++ b/AlphaPic/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_activity_history">History</string>
     <string name="prefs_file_key">game_history</string>
     <string name="chartTitle">Avg Seconds to Take Photo Per Letter</string>
+    <string name="title_activity_photo">PhotoActivity</string>
+    <string name="extra_letter_key">EXTRA_LETTER</string>
 </resources>
